--- a/my_list.html
+++ b/my_list.html
@@ -1,4 +1,4 @@
-<p>Here I some soda names I came up with, off the top of my head.</p>
+<p>Here are some soda names I came up with, off the top of my head.</p>
 <ul>
   <li>"Dr. Pepper"</li>
   <li>"Diet Coke"</li>
